[package]
name = "elgato-keylight-air-tui"
version = "0.1.0"
authors = ["David Jensen <david.lgj@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5.27", features = ["derive"] }
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempergb = "0.1.2"
